Fix logo in docs on mobile

--- a/docs_theme/ranvier/assets/stylesheets/application.css
+++ b/docs_theme/ranvier/assets/stylesheets/application.css
@@ -73,6 +73,10 @@ input {
   border: 0;
   outline: 0; }
 
+.readme-logo {
+  max-width: 160px;
+}
+
 .md-icon, .md-nav__title::before, .md-nav__button, .md-nav__link::after, .admonition::before, .md-typeset .footnote-backref, .md-typeset .critic.comment::before, .md-typeset .task-list-control .task-list-indicator::before {
   font-family: "Material Icons";
   font-style: normal;
